app/css/wiki.css
#wiki .scrollableContent{
	margin-top:4em;
	position:relative;
}

#wiki .folder:first-child>span>.text{
	background-color: #D1D1D1
}


#wiki .right{
	position: absolute;
	right:0em;
	top:0em;
	z-index: 3;
	padding-top: 0.5em;
	padding-right:1em; 
}
#wiki .openList   { display: block; }
#wiki .closeList { display: none;  }

#wiki .firstWikiNode{
	display: block;
}
#wiki ul{
	margin-left: 2;
	list-style-type: none;
}
#wiki .header{
	vertical-align: middle;
	position: relative;
}
#wiki #wikiPage .header .title{
	font-size: 2.5em;
	font-weight: bold;
	background-color: #D1D1D1;
	line-height: 2.5em;
}

#wiki #wikiPage .header .accordion{
	margin-bottom: 0px !important;
}

#wiki #wikiPage .header .accordion-heading{
	font-size: 2.5em;
	line-height: 2em;
	font-weight: bold;
	background-color: #D1D1D1;
}

#wiki #wikiPage .header .accordion-heading a{
	text-decoration: none !important;
}

#wiki #wikiPage .header .accordion-inner{
	padding: 0px;
}

#wiki #wikiPage #childrenPicker #childrenPage{
	font-size: 1.8em;
	border-bottom: 0.09em solid #BABABA;
	width: 100%;
	line-height: 2em;
}

#wiki #wikiPage #childrenPicker #childrenPage .iconHolder {
	padding-left: 1em;
	padding-right: 1em;
	background-color: #D1D1D1;
	position: absolute;
}

#wiki .toChildren{
	display: inline-block;
	position: relative;
	overflow: hidden;
}

#wiki #content{
	text-align: left;
	padding: 1em;
}

#wiki #contentList .root{
	margin: 0;
}

#wiki .iconHolder {
	padding-left: 1em;
	padding-right: 1em;
	background-color: #D1D1D1;
	position: absolute;
}
#wiki #contentList .leafTitle{
	height: 2em;
	line-height: 2em;
	font-size:2em;
	position: relative;
	text-align: left;
	position: relative;
	border-bottom: 0.09em solid #BABABA;
}
#wiki #contentList .leafTitle .text{
	overflow: hidden;
	height: 2em;
	color: #5b677d;
	padding-left: 4em;
	font-weight: bold;
}
#wiki .unfold{
	width: 50px;
	background-color:#D1D1D1;
	position: absolute;
	right: 0;
	top:0;
}
#wiki .unfoldTransition{
	width: 50px;
	height:2em;
	position: absolute;
	right: 50px;
	top:0;
    background-image: -webkit-gradient(
    	linear,
    	right top, left top,
    	from(rgba(209, 209, 209, 1.0)),
    	to(rgba(209, 209, 209, 0))
	);
}

#wiki #listBtn{
	z-index: 2;
	font-size: 1.5em;
	width: 30%;
	text-align:left !important;
}

#wiki #parentPage{
	font-size: 1.2em;
	font-weight: bold;
	margin-left: 5px;
	z-index: 2;
	width: 30%;
}

#wiki #wikiPage{
	float: left;
}


#wiki .folder:{
}

